[gd_scene load_steps=2 format=2]

[ext_resource path="res://Fish/Scripts/test_fish.gd" type="Script" id=1]

[node name="TestFish" type="Node2D"]
script = ExtResource( 1 )

[node name="StrikeTimer" type="Timer" parent="."]

[node name="FightTimer" type="Timer" parent="."]
process_mode = 0

[connection signal="timeout" from="StrikeTimer" to="." method="_on_StrikeTimer_timeout"]
[connection signal="timeout" from="FightTimer" to="." method="_on_FightTimer_timeout"]
